[gd_scene load_steps=3 format=3 uid="uid://t7ayq0f6p51y"]

[ext_resource type="Script" path="res://Scripts/InteractableExamine.gd" id="1_svngw"]
[ext_resource type="FontFile" uid="uid://by5dwbq2nomha" path="res://Fonts/Nanum_Pen_Script/NanumPenScript-Regular.ttf" id="2_7w0gn"]

[node name="Interactable" type="Area2D" groups=["interactable"]]
script = ExtResource("1_svngw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
hframes = 8
vframes = 8
frame = 11

[node name="Label" type="Label" parent="."]
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("2_7w0gn")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
